# WASPER-ERPNEXT-PLUGING-main

./: MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  setup.py
wasper_inventory/api/: __init__.py
wasper_inventory/public/css/: wasper_inventory.css
wasper_inventory/wasper_inventory/: __init__.py  hooks.py  patches.txt
wasper_inventory/wasper_inventory/public/js/: wasper_inventory.js
